# smog-trace-converter

./: .gitignore  Makefile.am  configure.ac
src/: args.c  args.h  smog-trace-bitmap.cpp  smog-trace-converter.c  smog-trace-converter.cpp  smog-trace-converter.h  tracefile.c  tracefile.h  util.c  util.h
src/backends/: histogram.cpp  histogram.h  parquet.cpp  parquet.h  png-frames.c  png-frames.cpp  png-frames.h  png.c  png.h
